--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<h1>hello world</h1>
-	<h2>jklkjlsdz sdkcjlzFKJ</h2>
+	<h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe deserunt dolor quam sunt ipsam voluptate natus nostrum distinctio minima, unde mollitia dolores laboriosam veniam, enim non officiis at minus aliquam.</h2>
 </body>
 
 </html>
